testdata/baselines/reference/submodule/compiler/classInConvertedLoopES5.errors.txt
classInConvertedLoopES5.ts(1,7): error TS2322: Type '{}' is not assignable to type 'Record<string, object>'.
  Index signature for type 'string' is missing in type '{}'.


==== classInConvertedLoopES5.ts (1 errors) ====
    const classesByRow: Record<string, object> = {};
          ~~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'Record<string, object>'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    for (const row of ['1', '2', '3', '4', '5']) {
      class RowClass {
        row = row;
        static factory = () => new RowClass();
      }
    
      classesByRow[row] = RowClass;
    }